--- a/store.html
+++ b/store.html
@@ -491,6 +491,34 @@ padding-right: 20px;
 #myUL li a:hover:not(.header) {
   background-color: #eee;
 }
+
+.collapsible {
+  background-color: yellow;
+  color: blue;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 17px;
+  font-weight: bold;
+  border-style: solid;
+  border-color: green;
+  border-width: 5px;
+}
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: yellow;
+  color: blue;
+  text-align: center;
+  border-style: solid;
+  border-color: green;
+  border-width: 5px;
+  font-weight: bold;
+}
     </style>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -879,6 +907,63 @@ for (i = 0; i < coll.length; i++) {
           </div>
         </div>
   </div>
+          
+<div id="myNav4" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav4()">&times;</a>
+  <div class="overlay-content">
+<h1>Magasin de matériel</h1>
+<p>JstMStudio dispose également d'un magasin de matériel. JstMStudio vend de nombreux matériaux développés par le studio sur JstMStudio Material Store. JstMStudio Material Store produit des matériaux de haute qualité que nos clients et clients peuvent utiliser sur leur site Web pour une marge du coût. JstMStudio vend du matériel ici pour financer également certaines des opérations du studio. </p>
+<br>
+<hr>
+<br>
+<h2>Matériaux</h2>
+<p>JstMStudio vend actuellement plusieurs types de matériel de site Web pour une marge du prix de notre concurrent. Vous pouvez consulter tous les matériaux vendus par JstMStudio qui sont répertoriés ci-dessous.</p>
+<br>
+<button type="button" class="collapsible">Thèmes</button>
+<div class="content">
+<p>JstMStudio vend une configuration de thème pour nos clients et utilisateurs. La configuration des thèmes JstMStudio permet aux utilisateurs du client de modifier les thèmes des pages Web à la couleur qu'ils préfèrent. Nous fournissons actuellement 9 configurations dans ce matériel.</p>
+<li style="text-align:left;">Prix : 30 $</li>
+<li style="text-align:left;">Délai de livraison : 48 heures</li>
+<li style="text-align:left;"><a href="materials/themes.html">Démo</a></li>
+<br>
+</div>
+<br><br>
+<button type="button" class="collapsible">Bouton d'hyperlien couleur animé</button>
+<div class="content">
+  <p>JstMStudio vend également un bouton de lien hypertexte qui contient un changement de couleur et une animation unique lors du survol du bouton. Les clients peuvent ajouter ceci aux hyperliens de leur site Web pour seulement 20 $. </p>
+  <li style="text-align:left;">Prix : 20 $</li>
+<li style="text-align:left;">Délai de livraison : 48 heures</li>
+<li style="text-align:left;"><a href="materials/animated-color-hyperlink-button.html">Démo</a></li>
+<br>
+</div>
+<br><br>
+<button type="button" class="collapsible">Filtre de recherche avec description</button>
+<div class="content">
+  <p>JstMStudio vend un filtre de recherche à partir d'une liste d'éléments contenant une description pour chacun et tous les éléments de la liste entière. Le filtre de recherche JstMStudio recherche uniquement le nom ou le titre des éléments, ce qui le rend plus précis. Vous pourriez l'avoir sur votre site Web pour seulement 20 $.</p>
+    <li style="text-align:left;">Prix : 20 $</li>
+<li style="text-align:left;">Délai de livraison : 48 heures</li>
+<li style="text-align:left;"><a href="materials/search-filter-with-description.html">Démo</a></li>
+<br>
+</div>
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
+  </div>
+</div>
 
 <h1>Magasin</h1>
 <p>Jst polyvalent lieu de travail est une petite équipe basée en Malaisie. Jst polyvalent lieu de travail se concentre sur de nombreux domaines, du développement de sites Web à l'écriture d'histoires. Jst polyvalent lieu de travail est fondé par un groupe de jeunes amis intéressés par la technologie.</p>
@@ -908,6 +993,8 @@ for (i = 0; i < coll.length; i++) {
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;" onclick="openNav2()" id="store">Magasin</div>
 <br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;" onclick="openNav3()" id="website">Site Web</div>
+<br>
+<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;" onclick="openNav4()" id="materialstore">Magasin de matériel</div>
 <br>
 <script>
 function openNav() {
@@ -940,6 +1027,14 @@ function openNav3() {
 
 function closeNav3() {
   document.getElementById("myNav3").style.width = "0%";
+}
+
+function openNav4() {
+  document.getElementById("myNav4").style.width = "100%";
+}
+
+function closeNav4() {
+  document.getElementById("myNav4").style.width = "0%";
 }
 </script>
 <br><br>
