--- a/store.html
+++ b/store.html
@@ -648,6 +648,17 @@ padding-right: 20px;
   <h1>Prix</h1>
   <div class="columns">
     <ul class="price" style="background-color:yellow;color:red;">
+<li class="header" style="background-color:red;color:yellow;">Newsletter</li>
+       <li class="grey">50 $</li>
+       <li style="background-color:blue;color:yellow;">Permanent</li>
+       <li style="background-color:blue;color:yellow;">Annonces newsletter</li>
+       <li style="background-color:blue;color:yellow;">Afficher dans les e-mails</li>
+       <li class="grey"><a href="ticket.html" class="button">S'inscrire</a></li>
+    </ul>
+  </div>
+  
+  <div class="columns">
+    <ul class="price" style="background-color:yellow;color:red;">
       <li class="header" style="background-color:red;color:yellow;">Affichage</li>
       <li class="grey">200 $ / 1 000 vues</li>
       <li style="background-color:red;color:yellow;">1000 vues</li>
@@ -667,6 +678,19 @@ padding-right: 20px;
       <li class="grey"><a href="ticket.html" class="button">S'inscrire</a></li>
     </ul>
     </div>
+  
+    <div class="columns">
+    <ul class="price" style="background-color:yellow;color:red;">
+      <li class="header" style="background-color:red;color:yellow;">Video</li>
+<li class="header" style="background-color:red;color:yellow;">Vidéo</li>
+       <li class="grey">150 $ / 1 000 vues</li>
+       <li style="background-color:purple;color:yellow;">1000 vues</li>
+       <li style="background-color:purple;color:yellow;">Annonces vidéo</li>
+       <li style="background-color:purple;color:yellow;">Afficher dans la vidéo</li>
+       <li style="background-color:purple;color:yellow;">Vidéo uniquement</li>
+       <li class="grey"><a href="ticket.html" class="button">S'inscrire</a></li>
+    </ul>
+  </div>
     </div>
 <br><br>
 <button type="button" class="collapsible2">Annonces pour l'éditeur</button>
