--- a/web-app.html
+++ b/web-app.html
@@ -576,6 +576,8 @@ padding-right: 20px;
 <br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"> <a href="services/text-editor.html">Éditeur de texte</a></div>
 <br>
+<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"><a href="services/texttofile.html">Texte vers fichier</a></div>
+<br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"> <a href="services/texttospeech.html">Text to Speech</a></div>
 <br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"> <a href="services/to-do.html">À faire</a></div>
