--- a/services/music.html
+++ b/services/music.html
@@ -604,7 +604,7 @@ background-color: black;
 <p>"Together As One" est une chanson de 2 minutes qui a été publiée sous la forme d'une vidéo audio sur la chaîne YouTube Topic de PJ Masks le 16 septembre 2021. Elle a ensuite été publiée sous la forme d'un clip vidéo sur PJ Chaîne YouTube officielle de Masks le 17 septembre 2021.</p>
     <br>
     <audio controls>
-        <source src="music/Together As One.mp3" type="audio/mpeg">
+        <source src="../music/Together As One.mp3" type="audio/mpeg">
 Votre navigateur ne supporte pas l'élément audio.
       </audio>
 </div></li>
@@ -613,7 +613,7 @@ Votre navigateur ne supporte pas l'élément audio.
 <p>"Shine on Everyone" est une chanson de 2 minutes qui a été publiée sous la forme d'un clip vidéo sur la chaîne YouTube officielle de PJ Masks et DisneyNOW le 28 avril 2021.</p>
   <br>
   <audio controls>
-    <source src="music/Shine On Everyone.mp3" type="audio/mpeg">
+    <source src="../music/Shine On Everyone.mp3" type="audio/mpeg">
 Votre navigateur ne supporte pas l'élément audio.
   </audio> 
   </div></li>
@@ -622,7 +622,7 @@ Votre navigateur ne supporte pas l'élément audio.
 <p>"Make Your Move" est une chanson de 2 minutes qui a été publiée sous la forme d'une vidéo audio sur la chaîne YouTube Topic de PJ Masks et publiée sur Twitter le 11 décembre 2020. Depuis le 28 avril 2021, cette chanson a été publié sous forme de vidéoclip sur DisneyNOW.</p>
 <br>
 <audio controls>
-    <source src="music/Make Your Move.mp3" type="audio/mpeg">
+    <source src="../music/Make Your Move.mp3" type="audio/mpeg">
 Votre navigateur ne supporte pas l'élément audio.
   </audio> 
 </div></li>
