--- a/services/contact.html
+++ b/services/contact.html
@@ -394,7 +394,7 @@ body {
     background-color: rgb(151, 47, 47);
 }
 
-button {
+.button3 {
     padding: 15px;
     border-radius: 5px;
     border: none;
@@ -403,7 +403,7 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.button3:hover {
     padding: 13px;
 }
 
@@ -646,8 +646,8 @@ background-color: black;
                 <label for="newPersonAddress">Adresse</label>
                 <input type="text" id="newPersonAddress">
 
-                <button id="newPersonCancelBtn">Annuler</button>
-                <button id="newPersonSubmitBtn">Envoyer</button>
+                <button class="button3" id="newPersonCancelBtn">Annuler</button>
+                <button class="button3" id="newPersonSubmitBtn">Envoyer</button>
         </div>
         </div>
         <script>
