--- a/web-app.html
+++ b/web-app.html
@@ -558,7 +558,7 @@ padding-right: 20px;
 <br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"> <a href="services/photo-storage.html">Stockage de photos</a></div>
 <br>
-<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"><a href="services/project.html" >Projet</a></div>
+<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"><a href="services/project-library.html" >Projet</a></div>
 <br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"> <a href="services/qr-code-generator.html">Générateur de code QR</a></div>
 <br>
