--- a/web-app.html
+++ b/web-app.html
@@ -466,7 +466,7 @@ padding-right: 20px;
      </li>
      <li>
      <li>
-       <a href="projet.html">
+       <a href="project.html">
          <i class='bx bxs-briefcase-alt-2'></i>
          <span class="links_name">Projet</span>
        </a>
